--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/multisig-gui/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Multisig Interface</title>
-    <script type="module" crossorigin src="/assets/index.f03d5169.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.db049a92.js">
-    <link rel="stylesheet" href="/assets/index.8b7390e5.css">
+    <script type="module" crossorigin src="/multisig-gui/assets/index.f03d5169.js"></script>
+    <link rel="modulepreload" href="/multisig-gui/assets/vendor.db049a92.js">
+    <link rel="stylesheet" href="/multisig-gui/assets/index.d128735d.css">
   </head>
   <body>
     <div id="root"></div>
